--- a/lerna.json
+++ b/lerna.json
@@ -1,13 +1,15 @@
 {
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "version": "0.1.0",
+  "version": "1.0.1-alpha.0",
   "command": {
     "run": {
       "npmClient": "yarn"
     },
     "version": {
-      "allowBranch": ["dev"]
+      "allowBranch": [
+        "dev"
+      ]
     }
   },
   "changelogPreset": "angular"
