--- a/packages/eslint-react-config/package.json
+++ b/packages/eslint-react-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kery-map-eslint/react",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha.0",
   "main": "index.js",
   "private": true,
   "repository": "https://github.com/kery-map/kery-map-eslint.git",
