test lerna to manage version

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "yarn && lerna bootstrap",
     "clean": "lerna clean",
-    "publish:prepare": "lerna publish --conventional-commits --conventional-prerelease",
+    "publish:prepare": "lerna publish --conventional-prerelease",
     "publish:release": "lerna publish --conventional-commits --conventional-graduate",
     "publish:bump": "lerna publish from-git --conventional-commits "
   },
