--- a/packages/eslint-react-config/package.json
+++ b/packages/eslint-react-config/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@kery-map-eslint/react",
-  "version": "1.0.1-alpha.0",
+  "version": "1.0.1-alpha.1",
   "main": "index.js",
   "repository": "https://github.com/kery-map/kery-map-eslint.git",
   "author": "DZG-MELODY <dongzhigang531@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "gitHead": "1f6d0529f9a19d267507c1565de818f8e1dc8026"
 }
