--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,7 @@
 {
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "version": "1.0.1-alpha.1",
+  "version": "1.0.1-alpha.2",
   "command": {
     "run": {
       "npmClient": "yarn"
@@ -10,7 +10,9 @@
       "registry": "https://registry.npmjs.org/"
     },
     "version": {
-      "allowBranch": ["dev"]
+      "allowBranch": [
+        "dev"
+      ]
     }
   },
   "changelogPreset": "angular"
