--- a/packages/eslint-react-config/package.json
+++ b/packages/eslint-react-config/package.json
@@ -5,5 +5,6 @@
   "repository": "https://github.com/kery-map/kery-map-eslint.git",
   "author": "DZG-MELODY <dongzhigang531@gmail.com>",
   "license": "MIT",
+  "private": true,
   "gitHead": "566a214e79cde1507f8d59676c5efd6b60e547c4"
 }
