--- a/packages/eslint-vue-config/package.json
+++ b/packages/eslint-vue-config/package.json
@@ -5,6 +5,9 @@
   "repository": "https://github.com/kery-map/kery-map-eslint.git",
   "author": "DZG-MELODY <dongzhigang531@gmail.com>",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "babel-eslint": "10.1.0",
     "eslint-plugin-vue": "6.2.2"
