--- a/packages/eslint-react-config/package.json
+++ b/packages/eslint-react-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kery-map-eslint/react",
+  "name": "@kery-map/eslint-config-react",
   "version": "1.0.1-alpha.3",
   "main": "index.js",
   "repository": "https://github.com/kery-map/kery-map-eslint.git",
